<resources>
    <string name="app_name">Black</string>
    <string name="title_activity">Title Activity</string>
    <string name="datetext">DateText</string>
    <string name="distancetext">DistanceText</string>
    <string name="title_activity_maps">Map</string>
    <string name="titledetailed">TitleDetailed</string>
    <string name="description_detailed">Description Detailed</string>
    <string name="date_detailed">date_detailed</string>
    <string name="detailed_distance">detailed_distance</string>
    <string name="startBtn" translatable="false">Start</string>
    <string name="stopBtn" translatable="false">Stop</string>
    <string name="okButton">Confirm</string>
    <string name="cancelButton">Cancel</string>
    <string name="confirmationText">Are you sure that you want to end tracking the route? The current route will be stopped and you\'ll be asked to put in details for saving the route.</string>
    <string name="confirmationTitleText">Confirmation screen</string>
    <string name="well_done">Well Done!</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="save">Save</string>
    <string name="rate">Rate your sport activity</string>
    <string name="polylineInfoTitle">Detailed information</string>
    <string name="polylineInfoDistance">Distance</string>
    <string name="polylineInfoTime">Estimated time</string>
    <string name="polylineInfoSpeed">Estimated velocity</string>
    <string name="cancel">Cancel</string>
    <string name="settingsRetrieveWeather">Retrieve weather on startup?</string>
    <string name="settingsMap">Map</string>
    <string name="settingsSortingActivity">Sorting of saved activitys</string>
    <string name="settingsOther">Other</string>
    <string name="settingsMapType">What kind of map would you like to use?</string>
    <string name="title_activity_race">Map2</string>
    <string name="distance">Distance:</string>
    <string name="degrees">Degrees:</string>
    <string name="previousTime">Previous time</string>
    <string name="currentTime">Current time</string>
    <string name="diffTime">Difference</string>
    <string name="continueButton">Continue</string>
</resources>
