<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="380dp"
    android:layout_height="230dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="5dp"
    android:visibility="visible">

    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        tools:context=".View.NotificationFragment"
        app:cardCornerRadius="15dp">

        <!-- TODO: Update blank fragment layout -->

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/not_TopBar"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:src="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/not_Background"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorAccent"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/not_TopBar" />

            <TextView
                android:id="@+id/not_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/confirmationTitleText"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/not_TopBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/poly_name"
                android:layout_width="332dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/confirmationText"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/not_Background" />

            <Button
                android:id="@+id/btn_confirmationCancel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="72dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/cancelButton"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/not_Background"
                app:layout_constraintEnd_toStartOf="@+id/poly_ok"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_confirmationOk"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="68dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/okButton"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/not_Background"
                app:layout_constraintEnd_toEndOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>