<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="380dp"
    android:layout_height="230dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="5dp"
    android:visibility="visible">

    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="368dp"
        android:layout_height="190dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="15dp"
        tools:context=".View.NotificationFragment">

        <!-- TODO: Update blank fragment layout -->

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/not_TopBar"
                android:layout_width="0dp"
                android:layout_height="29dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:src="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/not_Background"
                android:layout_width="0dp"
                android:layout_height="133dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorAccent"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/not_TopBar"
                app:layout_constraintVertical_bias="0.619" />

            <TextView
                android:id="@+id/poly_velocity"
                android:layout_width="151dp"
                android:layout_height="21dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/polylineInfoSpeed"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/poly_time" />

            <TextView
                android:id="@+id/polyline_distance_fill"
                android:layout_width="0dp"
                android:layout_height="21dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toEndOf="@+id/poly_name"
                app:layout_constraintTop_toTopOf="@+id/not_Background" />

            <TextView
                android:id="@+id/polyline_time_fill"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toEndOf="@+id/poly_name"
                app:layout_constraintTop_toTopOf="@+id/not_Background" />

            <TextView
                android:id="@+id/polyline_velocity_fill"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="64dp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toEndOf="@+id/poly_name"
                app:layout_constraintTop_toTopOf="@+id/not_Background" />

            <TextView
                android:id="@+id/poly_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/polylineInfoTitle"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/not_TopBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/poly_time"
                android:layout_width="151dp"
                android:layout_height="21dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/polylineInfoTime"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/poly_name" />

            <TextView
                android:id="@+id/poly_name"
                android:layout_width="121dp"
                android:layout_height="21dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/polylineInfoDistance"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/not_Background" />

            <Button
                android:id="@+id/poly_ok"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginBottom="12dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/okButton"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/not_Background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>